--- a/week3-homework/tabui.css
+++ b/week3-homework/tabui.css
@@ -1,3 +1,7 @@
+/*----------------공통부분 시작--------------*/
+ul, li{
+	list-style-type: none;
+}
 /*----------------header부분 시작--------------*/
 header{
 	text-align: center;
@@ -15,7 +19,7 @@ header{
 }
 
 
-ul, li{
+.userSNSInfo, .userSNSInfoDetail{
 	text-align: center;
 	list-style-type: none;
 	float: left;
@@ -23,9 +27,10 @@ ul, li{
 }
 
 
-span{
+
+/*span{
 	text-align: center;
-}
+}*/
 
 
 
@@ -33,6 +38,9 @@ span{
 /*-------------------nav부분 시작----------------*/
 nav{
 	clear: both;
+	display:table;
+	margin-left: auto;
+	margin-right: auto;
 
 }
 
@@ -42,7 +50,46 @@ nav{
 	text-align: center;
 }
 
+#position{
+	width: 200px;
+	background: #f1f1f1;
+	border-right: solid;
+}
+
+
+#friend{
+	width: 200px;
+	background: #f1f1f1;
+	border-right: solid;
+}
+
+#theme{
+	width: 200px;
+	background: #f1f1f1;
+	border-right: solid;
+}
+
+#news{
+	width: 200px;
+	background: #f1f1f1;
+	border-right: solid;
+}
 /*-------------------section부분 시작----------------*/
 .my_position{
+	//clear: both;
+}
+
+
+.navList{
+	//text-align: left;
+	list-style-position: inside;
+	padding-left: 0;
 	clear: both;
+}
+
+.myName{
+	//display: block;
+	text-align: left;
+	list-style: none;
+	padding-left: 0;
 }
