--- a/week3-homework/tabui.css
+++ b/week3-homework/tabui.css
@@ -44,41 +44,47 @@ nav{
 
 }
 
+.tab > span{
+	text-align: center;
+	margin-top: 100px;
+}
+
 
 .tab{
 	float: left;
 	text-align: center;
+	background-color: #f1f1f1;
+	border: solid #acacac;
+	width: 300px;
+	height: 50px;
+	padding-top: 25px;
+}
+
+
+.tab:hover{
+	float: left;
+	text-align: center;
+	background-color: #5f5f5f;
+	color:white;
+	border: solid #acacac;
+	width: 300px;
+	height: 50px;
+	padding-top: 25px;
 }
 
 #position{
-	width: 200px;
-	height: 100px;
-	background: #f1f1f1;
-	border-right: solid;
-	margin-top: auto;
-	margin-bottom: auto;
 }
 
 
 #friend{
-	width: 200px;
-	height: 100px;
-	background: #f1f1f1;
-	border-right: solid;
 }
+
 
 #theme{
-	width: 200px;
-	height: 100px;
-	background: #f1f1f1;
-	border-right: solid;
 }
 
+
 #news{
-	width: 200px;
-	height: 100px;
-	background: #f1f1f1;
-	border-right: solid;
 }
 /*-------------------section부분 시작----------------*/
 .my_position{
@@ -99,3 +105,13 @@ nav{
 	list-style: none;
 	padding-left: 0;
 }
+
+/*.hello{
+	background-color: blue;
+	display:block;
+	text-align: center;
+	padding-bottom: 50%;
+	//text-align: center;
+	//align: center;
+
+}*/
