--- a/week4-class/smallPRJ/view.css
+++ b/week4-class/smallPRJ/view.css
@@ -1,75 +1,87 @@
-	<style>
-		.standPoint{
-			width: 100%;
-			height: 100%;
-			position:relative;
-			background-color:#cccccc;
-		}
-		.viewPoint{
-			text-align: center;
-			width: 600px;
-			height:600px;
-			top:100px;
-			left:400px;
-			position: absolute;
-			transform: translate3d(100,100,0);
-			background-color:#2f2f2f;
-			border:solid black;
-			//overflow:hidden;
-		}
-		.buttonLeft{
-			width: 50px;
-			height: 50px;
-			top:300px;
-			left:0px;
-			position: relative;
-			background-color: blue;
-		}
-		.buttonRight{
-			width: 50px;
-			height: 50px;
-			top:250px;
-			left:550px;
-			position: relative;
-			background-color: blue;
-		}
-		.movePoint{
-			width: 3000px;
-			height: 600px;
-			top:0px;
-			//background-color:yellow;
-			position:absolute;
-		}
-		.view{
-			border:solid blue;
-			width: 600px;
-			height: 600px;
-			/*top:0px;
-			position:absolute;*/
+.standPoint{
+	width: 100%;
+	height: 100%;
+	position:relative;
+	//background-color:#black;
+}
+.viewPoint{
+	text-align: center;
+	width: 600px;
+	height:600px;
+	top:50px;
+	left:400px;
+	position: absolute;
+	//transform: translate3d(100,100,0);
+	//background-color:#2f2f2f;
+	border:solid black;
+	overflow:hidden;
+}
+.leftButton{
+	width: 50px;
+	height: 50px;
+	top:250px;
+	left:0px;
+	position: absolute;
+	background-color: blue;
+	z-index: 100;
+}
+.rightButton{
+	width: 50px;
+	height: 50px;
+	top:250px;
+	left:550px;
+	position: absolute;
+	background-color: blue;
+	z-index: 101;
+}
 
-		}
-		.view:nth-child(1){
-			position:absolute;
-			top:0px;
-		}
-		.view:nth-child(2){
-			position:absolute;
-			left:600px;
-			top:0px;
-		}
-		.view:nth-child(3){
-			position:absolute;
-			left:1200px;
-			top:0px;
-		}
-		.view:nth-child(4){
-			position:absolute;
-			left:1800px;
-			top:0px;
-		}
-		.view:nth-child(5){
-			position:absolute;
-			left:2400px;
-			top:0px;
-		}
-	</style>
+/*  움직이는 화면   */
+
+.movePoint{
+	width: 3000px;
+	height: 600px;
+	line-height: 600px;
+	//top:50px;
+	//left:400px;
+	//background-color:yellow;
+	position:absolute;
+	transform:translate3d(0px,0px,0px);
+	transition : all 2s;
+}
+.view{
+	//border:solid blue;
+	width: 600px;
+	height: 600px;
+	/*top:0px;
+	position:absolute;*/
+
+}
+.view:nth-child(1){
+	position:absolute;
+	background-color:#aaaaaa;
+	top:0px;
+}
+.view:nth-child(2){
+	position:absolute;
+	background-color:#e2e2e2;
+	left:600px;
+	top:0px;
+}
+.view:nth-child(3){
+	position:absolute;
+	background-color:#121212;
+	left:1200px;
+	top:0px;
+}
+.view:nth-child(4){
+	position:absolute;
+	background-color:#d2d22d;
+	left:1800px;
+	top:0px;
+}
+.view:nth-child(5){
+	position:absolute;
+	background-color:#333333;
+	left:2400px;
+	top:0px;
+}
