--- a/week4-class/smallPRJ/view.css
+++ b/week4-class/smallPRJ/view.css
@@ -45,7 +45,7 @@
 	//left:400px;
 	//background-color:yellow;
 	position:absolute;
-	transform:translate3d(0px,0px,0px);
+	//transform:translate3d(0px,0px,0px);
 	transition : all 2s;
 }
 .view{
