Modify 방법1. 무한롤링 기능 구

--- a/week4-class/smallPRJ/view.css
+++ b/week4-class/smallPRJ/view.css
@@ -47,6 +47,7 @@
 	position:absolute;
 	//transform:translate3d(0px,0px,0px);
 	transition : all 2s;
+	//transition : none;
 }
 .view{
 	//border:solid blue;
