--- a/week4-class/smallPRJ/view.css
+++ b/week4-class/smallPRJ/view.css
@@ -14,7 +14,7 @@
 	//transform: translate3d(100,100,0);
 	//background-color:#2f2f2f;
 	border:solid black;
-	overflow:hidden;
+	//overflow:hidden;
 }
 .leftButton{
 	width: 50px;
@@ -41,15 +41,15 @@
 	width: 3000px;
 	height: 600px;
 	line-height: 600px;
-	//top:50px;
-	//left:400px;
+	top:0px;
+	left:-600px;
 	//background-color:yellow;
 	position:absolute;
 	//transform:translate3d(0px,0px,0px);
 	transition : all 2s;
 	//transition : none;
 }
-.view{
+#view{
 	//border:solid blue;
 	width: 600px;
 	height: 600px;
@@ -57,32 +57,33 @@
 	position:absolute;*/
 
 }
-.view:nth-child(1){
+.view1{
 	position:absolute;
 	background-color:#aaaaaa;
-	top:0px;
-}
-.view:nth-child(2){
-	position:absolute;
-	background-color:#e2e2e2;
 	left:600px;
 	top:0px;
 }
-.view:nth-child(3){
+.view2{
 	position:absolute;
-	background-color:#121212;
+	background-color:#e2e2e2;
 	left:1200px;
 	top:0px;
 }
-.view:nth-child(4){
+.view3{
 	position:absolute;
-	background-color:#d2d22d;
+	background-color:#121212;
 	left:1800px;
 	top:0px;
 }
-.view:nth-child(5){
+.view4{
+	position:absolute;
+	background-color:#d2d22d;
+	left:2400px;
+	top:0px;
+}
+.view5{
 	position:absolute;
 	background-color:#333333;
-	left:2400px;
+	left:3000px;
 	top:0px;
 }
